--- a/backend/apps/payouts/templates/payouts/confirm_payout.html
+++ b/backend/apps/payouts/templates/payouts/confirm_payout.html
@@ -8,8 +8,15 @@
 
 <ul>
     <li><strong>Wallet ID:</strong> {{ wallet.id }}</li>
-    <li><strong>User:</strong> {{ wallet.user }}</li>
+    <li><strong>User:</strong> {{ wallet.creator }}</li>
     <li><strong>Balance:</strong> {{ wallet.balance }}</li>
+</ul>
+
+<p> The payout will be sent to the following payout account:</p>
+<ul>
+    <li><strong>Account Type:</strong> {{ payout_account.account_name }}</li>
+    <li><strong>Account Number:</strong> {{ payout_account.phone_number }}</li>
+    <li><strong>Bank Name:</strong> {{ payout_account.provider }}</li>
 </ul>
 
 <p style="color: red; font-weight: bold;">
