--- a/backend/apps/payouts/templates/payouts/finalise_payout.html
+++ b/backend/apps/payouts/templates/payouts/finalise_payout.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% load i18n %}
 {% load custom_filters %}
-{% block title %} Confirm-Finalise Payment {% endblock%}
+{% block title %} Finalise Payout {% endblock%}
 {% block content %}
 <h1>Finalise Wallet Payout</h1>
 
@@ -9,9 +9,16 @@
 
 <ul>
     <li><strong>Wallet:</strong> {{ wallet.id }}</li>
-    <li><strong>User:</strong> {{ wallet.user }}</li>
+    <li><strong>User:</strong> {{ wallet.creator }}</li>
     <li><strong>Payout Reference:</strong> {{ payout_tx.reference }}</li>
     <li><strong>Amount:</strong> {{ wallet.currency}} {{ payout_tx.amount|absolute}}</li>
+</ul>
+
+<p> The payout will be sent to the following payout account:</p>
+<ul>
+    <li><strong>Account Type:</strong> {{ payout_account.account_name }}</li>
+    <li><strong>Account Number:</strong> {{ payout_account.phone_number }}</li>
+    <li><strong>Bank Name:</strong> {{ payout_account.provider }}</li>
 </ul>
 
 <p style="color: red; font-weight: bold;">
